--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,10 @@
 jieba~=0.42.1
-nltk~=3.6.7
-gensim~=4.3.2
 pandas~=2.2.2
+openpyxl~=3.1.5
+gensim~=4.3.2
 pyLDAvis~=3.4.1
-keras~=3.3.2
-sklearn~=0.0
-scikit-learn~=1.0.2
+tensorflow~=2.16.1
 joblib~=1.4.2
+numpy~=1.26.4
 matplotlib~=3.8.2
 seaborn~=0.13.2
-plotly~=5.22.0
